feat: integrate KERN UX ANNEX web components and update application configuration
- Added dependency for @kern-ux-annex/webc in package.json.
- Updated public/config.json to reflect new versioning and routing values.
- Enhanced src/app.ts to load web components dynamically with error handling.
- Modified src/main.ts to include routing count and last modified date in service status.
- Created new styles for KERN components in src/styles/kern-components.css.
- Added TypeScript definitions for KERN web components in src/types/webc.d.ts.
- Updated vite.config.ts to ensure proper bundling and optimization for web components.

--- a/.gitignore
+++ b/.gitignore
@@ -34,8 +34,8 @@ bower_components
 # node-waf configuration
 .lock-wscript
 
-# Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+# Compiled binary
+build
 
 # Dependency directories
 node_modules/
