--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "deploy:only": "azd deploy"
   },
   "dependencies": {
+    "@kern-ux-annex/webc": "^2.16.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
