--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "jsdom": "^23.0.1",
     "prettier": "^3.1.0",
     "terser": "^5.43.1",
-    "typescript": "^5.3.2",
+    "typescript": "5.3.2",
     "vite": "^5.0.3",
     "vitest": "^1.0.4"
   },
