--- a/package.json
+++ b/package.json
@@ -28,28 +28,28 @@
     "@kern-ux-annex/webc": "^2.16.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "helmet": "^7.1.0",
+    "express": "5.1.0",
+    "helmet": "8.1.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
+    "@types/express": "5.0.3",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20.10.0",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
-    "@vitest/coverage-v8": "^1.0.4",
-    "@vitest/ui": "^1.0.4",
+    "@types/node": "24.0.13",
+    "@typescript-eslint/eslint-plugin": "8.36.0",
+    "@typescript-eslint/parser": "8.36.0",
+    "@vitest/coverage-v8": "3.2.4",
+    "@vitest/ui": "3.2.4",
     "auto-changelog": "^2.4.0",
-    "eslint": "^8.54.0",
-    "jsdom": "^23.0.1",
+    "eslint": "9.31.0",
+    "jsdom": "26.1.0",
     "prettier": "^3.1.0",
     "terser": "^5.43.1",
-    "typescript": "5.3.2",
-    "vite": "^5.0.3",
-    "vitest": "^1.0.4"
+    "typescript": "5.8.3",
+    "vite": "7.0.4",
+    "vitest": "3.2.4"
   },
   "keywords": [
     "url-shortener",
