--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "deploy:only": "azd deploy"
   },
   "dependencies": {
-    "@kern-ux-annex/webc": "^2.16.2",
+    "@kern-ux-annex/webc": "2.20.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "5.1.0",
@@ -38,8 +38,8 @@
     "@types/express": "5.0.3",
     "@types/morgan": "^1.9.9",
     "@types/node": "24.0.13",
-    "@typescript-eslint/eslint-plugin": "8.36.0",
-    "@typescript-eslint/parser": "8.36.0",
+    "@typescript-eslint/eslint-plugin": "8.37.0",
+    "@typescript-eslint/parser": "8.37.0",
     "@vitest/coverage-v8": "3.2.4",
     "@vitest/ui": "3.2.4",
     "auto-changelog": "^2.4.0",
