--- a/.github/workflows/azure-static-web-apps-ci-cd.yml
+++ b/.github/workflows/azure-static-web-apps-ci-cd.yml
@@ -27,11 +27,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Clean install dependencies
+        run: |
+          rm -rf node_modules package-lock.json
+          npm install
 
       - name: Run lint
         run: npm run lint
@@ -56,7 +58,7 @@ jobs:
           api_location: ""
           output_location: "build"
         env:
-          NODE_VERSION: '18'
+          NODE_VERSION: '20'
 
   close_pull_request_job:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
