fix: add route for status.html with anonymous access

--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -5,6 +5,10 @@
       "allowedRoles": ["anonymous"]
     },
     {
+      "route": "/status.html",
+      "allowedRoles": ["anonymous"]
+    },
+    {
       "route": "/assets/*",
       "allowedRoles": ["anonymous"]
     },
