chore: update dependencies and configuration files
- Updated @kern-ux-annex/webc from 2.20.8 to 2.20.10
- Updated compression from 1.7.4 to 1.8.1
- Updated morgan from 1.10.0 to 1.10.1
- Updated @types/node from 24.0.14 to 24.7.0
- Updated @typescript-eslint/eslint-plugin and parser from 8.37.0 to 8.46.0
- Updated eslint from 9.31.0 to 9.37.0
- Updated jsdom from 26.1.0 to 27.0.0
- Updated terser from 5.43.1 to 5.44.0
- Updated typescript from 5.8.3 to 5.9.3
- Updated vite from ^6.0.0 to ^6.3.6
- Updated public/config.json version to 1.1.8 and modified metadata timestamps
- Added new routing configurations for Ehefaehigkeitszeugnis and EhefaehigkeitszeugnisOhneLeika in public/config.json
- Updated staticwebapp.config.json to include CORS headers
- Modified status.html to include new example URLs for Ehefaehigkeitszeugnis and EhefaehigkeitszeugnisOhneLeika
- Updated footer version in status.html to V1.21

--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -28,6 +28,12 @@
     ".css": "text/css"
   },
   "globalHeaders": {
-    "Cache-Control": "no-cache"
+    "Cache-Control": "no-cache",
+    "Access-Control-Allow-Origin": "https://weiterleitung.hamburg.de https://preview.hamburg.de",
+    "Access-Control-Allow-Methods": "GET, POST, OPTIONS",
+    "Access-Control-Allow-Headers": "Content-Type, Authorization",
+    "Access-Control-Max-Age": "86400",
+    "Cross-Origin-Embedder-Policy": "unsafe-none",
+    "Cross-Origin-Resource-Policy": "cross-origin"
   }
 }
